fix(core/tabs): fix overflow clipping on dropdown

--- a/packages/core/src/components/tabs/tabs.scss
+++ b/packages/core/src/components/tabs/tabs.scss
@@ -67,6 +67,7 @@
     height: 100%;
     width: 100%;
     pointer-events: all;
+    mask-clip: no-clip;
 
     &.shadow-left {
       mask-image: linear-gradient(90deg, transparent 0px, black 45px);
